remove item from RecyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">RecipeAdviser</string>
     <string name="update_list_of_recipes">Update list of recipes</string>
+    <string name="remove_item">Remove the recipe</string>
 </resources>
