add show current recipe activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">RecipeAdviser</string>
     <string name="update_list_of_recipes">Update list of recipes</string>
     <string name="remove_item">Remove the recipe</string>
+    <string name="ingredients">Ingredients</string>
+    <string name="preparing_steps">Steps</string>
 </resources>
