--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="remove_item">Remove the recipe</string>
     <string name="ingredients">Ingredients</string>
     <string name="preparing_steps">Steps</string>
+    <string name="action_settings">Settings</string>
 </resources>
