--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="ingredients">Ingredients</string>
     <string name="preparing_steps">Steps</string>
     <string name="action_settings">Settings</string>
+    <string name="login">Log in</string>
+    <string name="create_new_account">Create new account</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+
 </resources>
