--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">RecipeAdviser</string>
     <string name="update_list_of_recipes">Update list of recipes</string>
@@ -11,9 +12,4 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="language">Language</string>
-
-    <string-array name="languages_array">
-        <item>English</item>
-        <item>Русский</item>
-    </string-array>
 </resources>
