--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,9 +7,14 @@
     <string name="ingredients">Ingredients</string>
     <string name="preparing_steps">Steps</string>
     <string name="action_settings">Settings</string>
+    <string name="action_food_prefs">Food Preferences</string>
     <string name="login">Log in</string>
     <string name="create_new_account">Create new account</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="language">Language</string>
+    <string name="diet_type">Diet Type</string>
+    <string name="low_calorie">Low Calorie</string>
+    <string name="vegetarian">Vegetarian</string>
+    <string name="liver_disease">Liver Disease</string>
 </resources>
